<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/holo_blue_bright"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SolverActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="302dp"
            android:id="@+id/addImageView"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" tools:ignore="ContentDescription"/>
    <TextView
            android:text="@string/text_here"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/answer_response" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/addImageView" android:textSize="24sp"
            android:textAlignment="center"/>
    <Button
            android:text="@string/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gobutton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="18sp"/>
    <Button
            android:text="@string/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/retrybutton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/gobutton" android:textSize="18sp"/>

</android.support.constraint.ConstraintLayout>