<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_light"
        tools:context=".AddingActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="302dp" app:srcCompat="@drawable/greg"
            android:id="@+id/addImageView"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" tools:ignore="ContentDescription"/>
    <TextView
            android:text="@string/greg_help"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/addTextView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/addImageView"
            android:textSize="20sp"/>
    <TextView
            android:text="@string/Value"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:id="@+id/numOneView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/addTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="96dp" app:layout_constraintEnd_toStartOf="@+id/operationView"
            android:layout_marginEnd="32dp" android:textSize="30sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/addition"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:id="@+id/operationView" app:layout_constraintStart_toEndOf="@+id/numOneView"
            android:layout_marginStart="42dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/addTextView" android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/numTwoView" android:layout_marginEnd="42dp"/>
    <TextView
            android:text="@string/Value"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:id="@+id/numTwoView" app:layout_constraintStart_toEndOf="@+id/operationView"
            android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/addTextView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="96dp" android:textSize="30sp" android:textAlignment="center"/>
    <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:ems="10"
            android:id="@+id/answerText"
            android:background="@android:color/white"
            android:inputType="number" android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/Value"
            android:layout_marginEnd="149dp"
            android:layout_marginBottom="125dp" app:layout_constraintStart_toEndOf="@+id/equalsText"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/operationView" android:textAlignment="center"/>
    <TextView
            android:text="@string/word_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equalsText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" android:layout_marginBottom="125dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="30sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/numOneView"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addsubmitbutton" android:text="@string/submit_button"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>